--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,15 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/aa7e42c0b3.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Semester planner</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-
   </body>
 </html>
